--- a/GameStateAndLocalisation/GameStateAndLocalisation/GameStateAndLocalisation.vcxproj.filters
+++ b/GameStateAndLocalisation/GameStateAndLocalisation/GameStateAndLocalisation.vcxproj.filters
@@ -21,13 +21,20 @@
     <ClCompile Include="GameState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Language.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Language.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="guess_a_number.xml" />
+    <CopyFileToFolders Include="language.xml" />
   </ItemGroup>
 </Project>
